Update resume download links in index.html to reflect new file names and dates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
           <div class="section-title">
             <h2>Resume</h2>
-            <p>Here is my resume. You can download it as a <a href="https://mikewatson.us/Michael Watson - Resume October 2025.docx">Word document</a> or as a <a href="https://mikewatson.us/Michael Watson - Resume October 2025.pdf">PDF</a>.</p>
+            <p>Here is my resume. You can download it as a <a href="https://mikewatson.us/Michael_Watson_Resume_December%202025.docx">Word document</a> or as a <a href="https://mikewatson.us/Michael_Watson_Resume_December%202025.pdf">PDF</a>.</p>
           </div>
 
           <div class="row">
