Add react-helmet-async for improved document head management, update routing in App component, enhance Tailwind CSS configuration, and add meta tags in index.html for better SEO.

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="description" content="Product & Delivery Expert for Hire - I help teams ship faster by removing invisible friction." />
+    <meta name="theme-color" content="#5ba78e" />
   </head>
   <body>
     <div id="root"></div>
