Update package dependencies, enhance Tailwind CSS configuration with new font families and colors, and refactor consulting components to improve layout and content clarity. Remove unused components and integrate new experience timeline and methodology sections into the Consulting page.

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <meta name="description" content="Product & Delivery Expert for Hire - I help teams ship faster by removing invisible friction." />
-    <meta name="theme-color" content="#5ba78e" />
+    <meta name="description" content="Mike Watson - Senior Product Owner building products that solve real problems. 14+ years in fintech and enterprise software." />
+    <meta name="theme-color" content="#0e7490" />
+    <!-- Google Fonts: Manrope + Noto Sans -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <!-- Material Symbols Outlined -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
