Update index.html and portfolio-content.ts to refine job title and enhance SEO description for clarity and consistency in professional branding.

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <meta name="description" content="Mike Watson - Senior Product Owner building products that solve real problems. 14+ years in fintech and enterprise software." />
+    <meta name="description" content="Mike Watson - Senior Product Manager building products that solve real problems. 14+ years in fintech and enterprise software." />
     <meta name="theme-color" content="#0e7490" />
     <!-- Google Fonts: Manrope + Noto Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
